--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/tryber/exercises-programming-logic-challenges#readme",
   "dependencies": {
-    "jest": "^27.1.1"
+    "jest": "^27.1.1",
+    "test": "^0.6.0"
   }
 }
